# traveling-salesman

./: .env  Cargo.toml  README.md  build.gradle  settings.gradle
input/: mejor-150.txt
reporte/: reporte.aux  reporte.bbl  reporte.blg  reporte.out  reporte.tex
reporte/imgs/: 150-ejecucion-orden.txt  150-ejecucion-semilla-727.txt  40-ejecucion-orden.txt  40-ejecucion-semilla-625-menor.txt
resultado/resultadosConHillDescent/: 40-mejor.txt  40-semillas.txt
resultado/resultadosIterandoSemillas/: 150-1000-semillas.txt  150-ejecucion-semilla-727.txt  150-semillas.txt  40-1000-semillas.txt  40-ejecucion-semilla-625.txt  40-semillas.txt  mejor-150.txt  mejor-40.txt  mejor-ruta-150.txt  mejor-ruta-40.txt
resultado/resultadosSinHillDescent/: 150-semillas.txt  40-semillas.txt
resultados/resultadosSinHillDescent/: mejor-150.txt  mejor-40.txt
src/: city.rs  database.rs  distance.rs  testDistance.rs
src/main/: DAO.kt
src/main/grafica/: Ciudad.kt  ConexionCiudad.kt  Grafica.kt
src/main/kotlin/grafica/: Ciudad.kt  ConexionCiudad.kt
src/main/kotlin/mx/unam/ciencias/heuristicas/: DAO.kt  Main.kt
src/main/kotlin/mx/unam/ciencias/heuristicas/grafica/: Ciudad.kt  Grafica.kt
src/main/kotlin/mx/unam/ciencias/heuristicas/modelo/: Ciudad.kt  Conexion.kt
src/main/kotlin/mx/unam/ciencias/heuristicas/tsp/: Algoritmo.kt  Grafica.kt  (+1 more)
src/test/: TestAgenteViajero.kt
src/test/input/: instancia-150.txt
src/test/kotlin/: TestAgenteViajero.kt
src/test/kotlin/mx.unam.heuristicas/: TestAgenteViajero.kt
src/test/kotlin/mx/unam/ciencias/heuristicas/: TestAgenteViajero.kt
(+1 files in other folders)
