[package]
name = "traveling-salesman"
version = "0.1.0"
authors = ["SandradelMarSoto <sandradelmarsoto@ciencias.unam.mx>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
gamma = "0.8.1"